crates/plotnik-tests/tests/04-emit/types/captures/error_required_bool.txt
Q = (identifier) @value :: bool
------------------ DIAGNOSTICS -------------------
error: capture type `bool` requires a value that may be absent. This capture is always present
 --> query.ptk:1:25
  |
1 | Q = (identifier) @value :: bool
  |                         ^^^^^^^
